# ouchi-se-uv

./: .gitignore  ruff.toml  uv.md
01/: pyproject.toml
01/ouchi_se_01/: reminder.py
02/: pyproject.toml
02/ouchi_se_02/: google_calendar_api.py  notification_daily.py
