[project]
name = "ouchi-se-01"
version = "0.1.0"
description = ""
authors = [{ name = "Ayaka Ikezawa", email = "hello@ikeay.net" }]
readme = "README.md"
requires-python = ">= 3.12"
dependencies = [
  "schedule>=1.2.2",
  "pushbullet-py>=0.12.0",
  "python-dotenv>=1.0.1",
]

[tool.uv]
dev-dependencies = []

# このパッケージを外部から参照したい場合
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ouchi_se_01"]
