[project]
name = "ouchi-se-02"
version = "0.1.0"
description = ""
authors = [{ name = "Ayaka Ikezawa", email = "hello@ikeay.net" }]
readme = "README.md"
requires-python = ">= 3.12"
dependencies = [
  "python-dotenv>=1.0.1",
  "google-api-python-client>=2.151.0",
  "google-auth>=2.36.0",
  "discord-py>=2.4.0",
  "schedule>=1.2.2",
]

[tool.uv]
dev-dependencies = []

# このパッケージを外部から参照したい場合
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ouchi_se_02"]
